Pre-Package 28th April

--- a/force-app/main/default/classes/CustomMetadataCallback.cls
+++ b/force-app/main/default/classes/CustomMetadataCallback.cls
@@ -1,11 +1,17 @@
+/*
+    CustomMetadataCallback
+    Author: Michael Holt
+    Date: 25th April 2020
+
+    Class to allow custom metadata to be inserted. Used on install by the EncryptionKeyGenerator Class.
+*/
+
 public class CustomMetadataCallback implements Metadata.DeployCallback {
     public void handleResult(Metadata.DeployResult result,
                              Metadata.DeployCallbackContext context) {
         if (result.status == Metadata.DeployStatus.Succeeded) {
-            System.debug('success: '+ result);
         } else {
             // Deployment was not successful
-            System.debug('fail: '+ result);
         }
     }
 }
