--- a/force-app/main/default/classes/SendMessageHandler.cls
+++ b/force-app/main/default/classes/SendMessageHandler.cls
@@ -1,5 +1,5 @@
 /*
-    SendMessageHandler
+    SendMessageHandler - Utilities Class for the SendMessage LWC
     Author: Michael Holt
     Date: 25th April 2020
 
@@ -57,6 +57,31 @@ public without sharing class SendMessageHandler {
         return errors;
     }
 
+    /*
+        setChatRead
+        Set the latest messages between the running user and the user passed to the method as "read"
+        Only apply to the latest 50 messages
+    */
+    @AuraEnabled
+    public static String setChatRead(String userId){
+        String thisUserLike = '%' + Userinfo.getUserId() + '%';
+        List<MHolt__Chat_Message__c> chatMsgs = [SELECT Id, OwnerId, MHolt__Read__c, createdDate 
+                                                FROM MHolt__Chat_Message__c 
+                                                WHERE MHolt__Read__c = false 
+                                                AND OwnerId =: userId
+                                                AND MHolt__Participants__c Like: thisUserLike
+                                                ORDER BY createdDate DESC
+                                                Limit 50];
+        for(MHolt__Chat_Message__c cm : chatMsgs){
+            cm.MHolt__Read__c = true;
+        }
+        try{
+            update chatMsgs;
+            return 'Success';
+        }catch(Exception e){
+            return e.getMessage();
+        }
+    }
 
     /*
         postToChatter
@@ -179,7 +204,14 @@ public without sharing class SendMessageHandler {
         Blob cryptoKey = getCryptoKey();
         String user1Like = '%' + user1 + '%';
         String user2Like = '%' + user2 + '%';
-        
+        //If either of the users are groups, we need to get every message in that group, not just the messages with this user. 
+        //Replace both WHERE parameters with the ID of the group
+        if(user1Like.startsWith('%00G')){
+            user2Like = user1Like;
+        }else if(user2Like.startsWith('%00G')){
+            user1Like = user2Like;
+        }
+
         //Need to order DESC to get the latest messages, as we pull a maximum of lim number. Sort ASC will bring back the very oldest messages and miss the most recent
         List<MHolt__Chat_Message__c> chatMsgs = [SELECT Id, name, OwnerId, Owner.Name, MHolt__From_Name__c, MHolt__Message__c, MHolt__Participants__c, createdDate
                                                 FROM MHolt__Chat_Message__c 
@@ -187,6 +219,7 @@ public without sharing class SendMessageHandler {
                                                 AND MHolt__Participants__c like :user2Like
                                                 ORDER BY createdDate DESC
                                                 Limit :lim];
+
         List<User> users = getUsersWithSidkey(new List<String>{user1, user2});
         //Loop over the list of messages backwards, to sort their order, as they had to be pulled out of the DB DESC
         for(Integer i = chatMsgs.size() - 1; i >= 0; i--){
@@ -198,7 +231,7 @@ public without sharing class SendMessageHandler {
 
             returnMessages.add(wrap);
         }
-        system.debug(returnMessages);
+        
         return returnMessages;
         
     }
